# web_service

./: README.md
wallet_web_service/: CMakeLists.txt  README.md  agent_collector_localhost.cfg  load.yaml  main.cpp
wallet_web_service/dbms/: default.sql  main.cpp
wallet_web_service/dbms/include/: Dbms.h
wallet_web_service/dbms/src/: Dbms.cpp
wallet_web_service/include/: database_header.h  handler.h
wallet_web_service/src/: .database_impl.cpp.swp  database_impl.cpp  handler.cpp
wallet_web_service/static/: index.html
wallet_web_service/test/: generate_get.py  generate_mixed.py  generate_put.py  test_get.txt  test_get.yaml  test_mixed.txt  test_mixed.yaml  test_put.txt  test_put.yaml
web_service/: api_info.md
web_service/static/: index.html
